tools: disallow mixed spaces and tabs for indents
Enable eslint rule disallowing mixing tabs and spaces for indentation.
Modify the one file that had been mixing tabs and spaces.

PR-URL: https://github.com/nodejs/node/pull/5135
Reviewed-By: Michaël Zasso <mic.besace@gmail.com>
Reviewed-By: Roman Reiss <me@silverwind.io>

--- a/.eslintrc
+++ b/.eslintrc
@@ -65,6 +65,8 @@ rules:
   max-len: [2, 80, 2]
   ## require parens for Constructor
   new-parens: 2
+  ## disallow mixed spaces and tabs for indentation
+  no-mixed-spaces-and-tabs: 2
   ## max 2 consecutive empty lines
   no-multiple-empty-lines: [2, {max: 2}]
   ## no trailing spaces
