--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,6 @@
 env:
   node: true
-
-# enable ECMAScript features
-ecmaFeatures:
-  arrowFunctions: true
-  binaryLiterals: true
-  blockBindings: true
-  classes: true
-  forOf: true
-  generators: true
-  objectLiteralShorthandMethods: true
-  objectLiteralShorthandProperties: true
-  octalLiterals: true
-  templateStrings: true
+  es6: true
 
 rules:
   # Possible Errors
@@ -55,12 +43,10 @@ rules:
   no-trailing-spaces: 2
   quotes: [2, "single", "avoid-escape"]
   semi: 2
-  space-after-keywords: 2
   space-before-blocks: [2, "always"]
   space-before-function-paren: [2, "never"]
   space-in-parens: [2, "never"]
   space-infix-ops: 2
-  space-return-throw-case: 2
   space-unary-ops: 2
 
   # ECMAScript 6
