tools: replace obsolete ESLint rules
Now that we are using ESLint 2, replace ESLint 1 rules with their ESLint
2 equivalents.

PR-URL: https://github.com/nodejs/node/pull/5214
Reviewed-By: Michaël Zasso <mic.besace@gmail.com>
Reviewed-By: jbergstroem - Johan Bergström <bugs@bergstroem.nu>
Reviewed-By: James M Snell <jasnell@gmail.com>
Reviewed-By: Roman Reiss <me@silverwind.io>
Reviewed-By: Myles Borins <myles.borins@gmail.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@ rules:
   comma-spacing: 2
   eol-last: 2
   indent: [2, 2, {SwitchCase: 1}]
+  keyword-spacing: 2
   max-len: [2, 80, 2]
   new-parens: 2
   no-mixed-spaces-and-tabs: 2
@@ -54,8 +55,8 @@ rules:
   arrow-parens: [2, "always"]
   arrow-spacing: [2, {"before": true, "after": true}]
   constructor-super: 2
-  no-arrow-condition: 2
   no-class-assign: 2
+  no-confusing-arrow: 2
   no-const-assign: 2
   no-dupe-class-members: 2
   no-this-before-super: 2
