tools: add Node.js-specific ESLint rules
Add these rules:

* no-restricted-modules: See
http://eslint.org/docs/rules/no-restricted-modules. It has been
configured to prohibit the use of the deprecated `sys` and `_linklist`
modules.
* no-new-require: See http://eslint.org/docs/rules/no-new-require
* no-mixed-requires: http://eslint.org/docs/rules/no-mixed-requires

PR-URL: https://github.com/nodejs/node/pull/5320
Reviewed-By: James M Snell <jasnell@gmail.com>
Reviewed-By: Michaël Zasso <mic.besace@gmail.com>
Reviewed-By: Ben Noordhuis <info@bnoordhuis.nl>

--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,18 @@ rules:
   no-octal: 2
   no-redeclare: 2
 
+  # Variables
+  # http://eslint.org/docs/rules/#variables
+  no-delete-var: 2
+  no-undef: 2
+  no-unused-vars: [2, {"args": "none"}]
+
+  # Node.js and CommonJS
+  # http://eslint.org/docs/rules/#nodejs-and-commonjs
+  no-mixed-requires: 2
+  no-new-require: 2
+  no-restricted-modules: [2, "sys", "_linklist"]
+
   # Stylistic Issues
   # https://github.com/eslint/eslint/tree/master/docs/rules#stylistic-issues
   comma-spacing: 2
@@ -65,12 +77,6 @@ rules:
   # Strict Mode
   # https://github.com/eslint/eslint/tree/master/docs/rules#strict-mode
   strict: [2, "global"]
-
-  # Variables
-  # https://github.com/eslint/eslint/tree/master/docs/rules#variables
-  no-delete-var: 2
-  no-undef: 2
-  no-unused-vars: [2, {"args": "none"}]
 
   # Custom rules in tools/eslint-rules
   require-buffer: 2
